add menu and footer, reworked tablet version

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Museum</title>
+    <title>National Art Museum of Ukraine</title>
+    <link rel="icon" href="./images/favicon.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,28 +16,92 @@
   <body class="page__body">
     <header class="page__section header">
       <a href="#" class="logo">
-        <img 
-          class="logo__image"
-          src="images/namu.svg" 
-          alt="NA MU"
-        >
+        na <br> mu
       </a>
     </header>
 
     <a href="#menu" class="icon icon--menu"></a>
 
-    <main>
-      <section class="page__section museum">
-        <div class="container">
-          <h1 class="museum__title">
-            Художній 
-            <br>
-            музей
-          </h1>
+    <nav class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <a href="#" class="icon icon--close"></a>
+          <ul class="menu__list">
+            <div class="menu__item">
+              <li class="menu__li">
+                <a href="#gallery" class="menu__link">
+                  Галерея
+                </a>
+              </li>
 
-          <div class="tickets tickets__positional">
-            <a href="#events" class="tickets__text">Квитки</a>
+              <li class="menu__li">
+                <a href="#subscription" class="menu__link">Про Нас</a>
+              </li>
+            </div>
+
+            <div class="menu__item">
+              <li class="menu__li">
+                <a href="#events" class="menu__link">
+                  Виставки та
+                  <br>
+                  події
+                </a>
+              </li>
+
+              <li class="menu__li">
+                <a href="#footer" class="menu__link">Контакти</a>
+              </li>
+            </div>
+          </ul>
+
+          <div class="menu__schedule">
+            <p class="menu__schedule--title">
+              Графік роботи
+            </p> 
+            <ul class="menu__schedule--days">
+              <li>
+                <span class="menu__schedule--marked">12:00 — 20:00</span> середа
+              </li>
+
+              <li>
+                <span class="menu__schedule--marked">12:00 — 20:00</span> четвер
+              </li>
+
+              <li>
+                <span class="menu__schedule--marked">12:00 — 20:00</span> п’ятниця
+              </li>
+
+              <li>
+                <span class="menu__schedule--marked">11:00 — 19:00</span> субота
+              </li>
+
+              <li>
+                <span class="menu__schedule--marked">11:00 — 19:00</span> неділя
+              </li>
+            </ul>
           </div>
+
+          <div class="menu__weekend">
+            <span class="menu__schedule--marked"> Вихідні:</span> понеділок, вівторок
+            <br>
+            каса припиняє роботу за 1 годину до
+            <br>
+            закриття музею
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <main class="normal">
+      <section class="page__section museum">
+        <h1 class="museum__title">
+          Художній 
+          <br>
+          музей
+        </h1>
+
+        <div class="tickets tickets__positional">
+          <a href="#events" class="tickets__text">Квитки</a>
         </div>
 
         <div class="museum__positional">
@@ -130,7 +195,7 @@
         </div>
       </section>
 
-      <section class="page__section gallery">
+      <section class="page__section gallery" id="gallery">
         <div class="container">
           <h2 class="gallery__title">
             Галерея
@@ -210,7 +275,7 @@
       </section>
 
       <section>
-        <div class="gallery--grid" id="gallery--grid">
+        <div class="gallery--grid">
           <div class="container">
             <div class="grid">
               <div class="grid__item--desktop-1-4">
@@ -259,7 +324,9 @@
         </div>
       </section>
 
-      <section class="page__section subscription">
+      <section class="page__section subscription
+      "
+      id="subscription">
         <h2 class="subscription__title">
           Підписка
         </h2>
@@ -286,8 +353,135 @@
       </section>
     </main>
 
-    <footer class="footer">
-      <div class="container"></div>
+    <footer class="footer" id="footer">
+      <div class="container">
+        <div class="footer__content">
+          <a href="#" class="footer__logo">
+            na <br> mu
+          </a>
+
+          <div class="footer__social">
+            <a 
+              href="https://www.facebook.com"
+              class="footer__social--link"
+              target="_blank"
+            >
+              <img 
+                src="images/facebook.svg" alt="Facebook"
+                class="footer__facebook"
+              >
+            </a>
+
+            <a 
+              href="https://www.instagram.com"
+              class="footer__social--link"
+              target="_blank"
+            >
+              <img 
+                src="images/instagram.svg" alt="Instagram"
+                class="footer__instagram"
+              >
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="grid">
+        <div class="              grid__item--mobile-1-1
+        grid__item--tablet-2-3 grid__item--desktop-3-4">
+          <div class="
+          footer__schedule
+          ">
+            <h3 class="footer__headline">Графік роботи</h3>
+
+            <div class="footer__info">
+              <div class="footer__info--container">
+                <p class="footer__info footer__info--time">12:00 — 20:00</p>
+                <p class="footer__info footer__info--day">середа</p>
+              </div>
+  
+              <div class="footer__info--container">
+                <p class="footer__info footer__info--time">12:00 — 20:00</p>
+                <p class="footer__info footer__info--day">четвер</p>
+              </div>
+  
+              <div class="footer__info--container">
+                <p class="footer__info footer__info--time">12:00 — 20:00</p>
+                <p class="footer__info footer__info--day">п’ятниця</p>
+              </div>
+  
+              <div class="footer__info--container">
+                <p class="footer__info footer__info--time">11:00 — 19:00</p>
+                <p class="footer__info footer__info--day">субота</p>
+              </div>
+  
+              <div class="footer__info--container">
+                <p class="footer__info footer__info--time">11:00 — 19:00</p>
+                <p class="footer__info footer__info--day">неділя</p>
+              </div>
+            </div>
+
+            
+            <div class="footer__days-off">
+              <strong>Вихідні:</strong> понеділок, вівторок
+              <br>
+              Каса припиняє роботу за 1 годину до закриття музею
+            </div>
+          </div>
+        </div>
+
+        <div class="
+          grid__item--mobile-2-2 
+          grid__item--tablet-4-5
+          grid__item--desktop-5-6"
+        >
+          <h3 class="footer__headline">
+            Контакти:
+          </h3>
+
+          <a
+            href="https://goo.gl/maps/eQjFUUxRMxi1gkqTA"
+            class="
+              footer__info
+              footer__info--contacts
+              footer__link"
+            target="_blank"
+          >
+            вул. М. Грушевського, 6; Київ, 01001
+          </a>
+
+          <br>
+          <a class="footer__link" href="tel:+380442781357">тел. +38 (044) 278-13-57</a> <br>
+          <a class="footer__link" href="tel:+3804427454">факс +38 (044) 278-74-54</a>
+
+          <p class="footer__info footer__info--email footer__info--contacts">
+            <a class="footer__link" href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
+          </p>
+        </div>
+
+        <a href="#" class="footer__return-button"></a>
+
+        <div class="
+          grid__item--mobile-1-2
+          grid__item--tablet-2-5"
+        >
+          <div class="footer__line"></div>
+        </div>
+
+        <div class="grid__item--mobile-1-1
+        grid__item--tablet-2-2 grid__item--desktop-8-9">
+          <a href="#events" class="footer__link footer__links">Виставки та події</a>
+          
+          <a href="#gallery" class="footer__link footer__links">Галерея</a>
+        </div>
+
+        <div class="grid_-item--mobile-2-2
+        grid__item--tablet-4-4 grid__item--desktop-10-10">
+          <a href="#contacts" class="footer__link footer__links">Контакти</a>
+
+          <a href="#subscription" class="footer__link footer__links">Про Нас</a>
+        </div>
+      </div>
     </footer>
 
     <script type="text/javascript" src="scripts/main.js"></script>
