--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,231 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="icon"
+      href="./images/logo.svg"
+      type="image/x-icon"
+    >
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header>
+      <div class="grid grid--desktop header__grid-image">
+        <img
+          src="./images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png"
+          alt="kiev_museum header__image"
+          class="header__image grid__item--desktop--6-12 grid__item--tablet--4-6"
+        >
+      </div>
+      <div class="container">
+        <div class="grid grid--desktop">
+          <div class="header__top grid__item--desktop--1-7 grid__item--tablet--1-4">
+            <a href="#menu" class="icon icon--burger"></a>
+            <a class="header__title header__title-small title logo title--black" href="#home">na <br> mu</a>
+          </div>
+
+          <h1
+            class=" title
+              header__title
+              title--black
+              header__title-big
+              grid__item--desktop--1-5
+              grid__item--tablet--1-3
+              "
+          >
+            Художній Музей
+          </h1>
+
+          <a href="#actual_events" class=" header__button
+          grid__item--desktop--2-4
+          grid__item--tablet--2-3"
+          >
+            <span class="header__button-text">
+              Квитки
+            </span>
+            <span class="header__button-arrow button-with-arrow">
+              &gt;
+            </span>
+          </a>
+
+          <a href="#actual_events" class="header__link grid__item--desktop--1-2">
+            <img src="./images/header__line.svg" alt="line"
+              class="header__line"
+            >
+            Події
+          </a>
+        </div>
+      </div>
+    </header>
+    <nav id="menu"class="page__menu menu">
+      <div class="container menu__container">
+        <div class="menu__left-block">
+          <a href="#" class="icon icon--close menu__icon"></a>
+          <ul class="menu__list">
+            <li class="menu__list-item">
+              <a href="#gallery" class="menu__list-link">Галерея</a>
+            </li>
+            <li class="menu__list-item">
+              <a href="#subscription" class="menu__list-link">Про нас</a>
+            </li>
+            <li class="menu__list-item">
+              <a href="#actual_events" class="menu__list-link">Виставки та <br> події</a>
+            </li>
+            <li class="menu__list-item">
+              <a href="#contacts" class="menu__list-link">Контакти</a>
+            </li>
+          </ul>
+        </div>
+        <div
+          class="menu__line"
+        ></div>
+        <div class="menu__right-block">
+          <p class="menu__text menu__text--1">
+            <span class="menu__text-title">Графік роботи</span>
+            <span class="menu__text-info">12:00 - 20:00</span> середа <br>
+            <span class="menu__text-info">12:00 - 20:00</span> четвер <br>
+            <span class="menu__text-info">12:00 - 20:00</span> п'ятниця <br>
+            <span class="menu__text-info">11:00 - 19:00</span> субота <br>
+            <span class="menu__text-info">11:00 - 19:00</span> неділя <br>
+          </p>
+          <p class="menu__text">
+            <span class="menu__text-info">Вихідні:</span> понеділок, <br>
+            вівторок <br>
+            Каса припиняє роботу за <br>
+            1 годину до закриття <br>
+            музею
+          </p>
+        </div>
+      </div>
+    </nav>
+    <main>
+      <section id="actual_events" class="events">
+        <div class="container">
+          <h2 class="title title--black title--middle events__title">Актуальні події</h2>
+          <div class="go_and_return">
+            <div class="grid grid--desktop events__block">
+              <div class="grid__item grid__item--desktop--1-7 grid__item--tablet--1-6">
+                <img
+                  src="./images/events_1.png"
+                  alt="Ілюстрація йду і повертаюсь"
+                  class="events__image events__image--1">
+              </div>
+              <div class="grid__item grid__item--desktop--8-12 grid__item--tablet--1-6">
+                <p>
+                  <span class="events__type">Виставка</span>
+                  <span class="events__date">26.08-29.11.2019</span>
+                </p>
+                <p class="events__name">
+                  Йду і повертаюсь
+                  <img
+                    src="./images/events_square.svg"
+                    alt="square"
+                    class="events__square"
+                  >
+                </p>
+                <p class="events__text">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку -
+                  українське мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="dreams">
+            <div class="grid grid--desktop events__block">
+              <div class="grid__item grid__item--desktop--1-7 grid__item--tablet--1-6">
+                <img
+                  src="./images/events_2.png"
+                  alt="Ілюстрація йду і повертаюсь"
+                  class="events__image">
+              </div>
+              <div class="grid__item grid__item--desktop--8-12 grid__item--tablet--1-6">
+                <p>
+                  <span class="events__type">Виставка</span>
+                  <span class="events__date">26.08-29.11.2019</span>
+                </p>
+                <p class="events__name">
+                  І спогади і мрії
+                  <img
+                    src="./images/events_square.svg"
+                    alt="square"
+                    class="events__square"
+                  >
+                </p>
+                <p class="events__text">
+                  Національний художній музей України до 100 річчя від дня народження   видатної української художниці
+                  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="lection">
+            <img
+              src="./images/events_3.jpg"
+              alt="sunset"
+              class="events__image events__image--last"
+            >
+            <div class="events__box">
+              <p class="events__box-type">
+                <span class="events__type">Виставка</span>
+                <span class="events__date">26/08/2019 - 11:00</span>
+              </p>
+              <p class="events__name events__box-name">
+                Від класицизму до романтизму
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="gallery" id="gallery">
+        <div class="container">
+          <h2 class="title title--middle title--black gallery__title">Галерея</h2>
+          <div class="grid gallery__desktop-block">
+            <div class="grid__item grid__item--desktop--1-4 gallery__first-row">
+              <img src="./images/gallery_img-1.png" alt="first gallery image">
+            </div>
+            <div class="grid__item grid__item--desktop--5-12 gallery__first-row">
+              <img src="./images/gallery_img-2.png" alt="second gallery image">
+            </div>
+            <div class="grid__item grid__item--desktop--1-8">
+              <img src="./images/gallery_img-3.png" alt="third gallery image">
+            </div>
+            <div class="grid__item grid__item--desktop--9-12">
+              <img src="./images/gallery_img-4.png" alt="fourth gallery image">
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="subscription" id="subscription">
+        <div class="container">
+          <h2 class="title title--white subscription__title">Підписка</h2>
+          <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+          <div class="grid grid--desktop">
+            <div class="grid__item grid__item--desktop--4-9 grid__item--tablet--2-5">
+              <form action="#" class="subscription__form">
+                <input
+                  type="email"
+                  name="email"
+                  class="subscription__email-input"
+                  placeholder="E-mail"
+                >
+                <input
+                  type="submit"
+                  value="&gt;"
+                  class="subscription__submit button-with-arrow"
+                >
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+
+    </main>
+    <footer></footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
