--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,459 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="icon" href="./images/NA MU.svg">
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
     <script type="text/javascript" src="scripts/main.js"></script>
+    <header>
+
+      <div class="header__content">
+        <div class="header size__nav">
+
+          <div class="header__icon">
+            <img src="./images/NA MU.svg" alt="icon"
+            class="header__icon" id="head">
+          </div>
+
+        </div>
+
+        <nav class="container">
+
+          <div class="title__content">
+
+            <h1 class="title">художній музей</h1>
+
+          </div>
+
+          <div class="title__buttom">
+            <a href="#" class="title__vector">
+              <div class="title__vector--text">
+                квитки
+              </div>
+
+              <div class="title__vector--button"></div>
+            </a>
+          </div>
+
+          <div class="title__podii--line">
+            <span class="title__podii title__podii--text">ПОДІЇ</span>
+          </div>
+
+        </nav>
+
+        <div class="header__nav">
+
+          <a href="#menu" class="header_nav--icon icon"><img src="/images/Vector_namu.svg" alt="#"></a>
+
+        </div>
+
+        <nav class="menu" id="menu">
+          <div class="menu__grid">
+            <div class="menu__content">
+
+              <div class="menu__closer">
+                <a href="#" class="icon">
+                  <img src="./images/Vector__closer.svg" alt="namu">
+                </a>
+              </div>
+
+              <ul class="menu__list">
+
+                <li class="menu__item">
+                  <a href="#gallery" class="menu__link">Галерея</a>
+                </li>
+
+                <li class="menu__item">
+                  <a href="#about" class="menu__link">Про Нас</a>
+                </li>
+
+                <li class="menu__item">
+                  <a href="#expo" class="menu__link">Виставки та події</a>
+                </li>
+
+                <li class="menu__item">
+                  <a href="#contacts" class="menu__link">Контакти</a>
+                </li>
+
+              </ul>
+            </div>
+
+            <div>
+              <ul class="menu__graphic menu__weekend">
+
+                <h2 class="title__second color--w">Графік роботи</h2>
+
+                <li class="time color--w">12:00 — 20:00
+                  <span class="title__second">середа</span>
+                </li>
+
+                <li class="time color--w">12:00 — 20:00
+                  <span class="title__second">четвер</span>
+                </li>
+
+                <li class="time color--w">12:00 — 20:00
+                  <span class="title__second">п'ятниця</span>
+                </li>
+
+                <li class="time color--w">11:00 — 19:00
+                  <span class="title__second">субота</span>
+                </li>
+
+                <li class="time color--w">11:00 — 19:00
+                  <span class="title__second">неділя</span>
+                </li>
+
+              </ul>
+
+              <div class="title__second">
+                <span class="time color--w">Вихідні:<span class="title__second color--w"> понеділок, вівторок <br> Каса припиняє роботу за 1 годину до закриття музею</span></span>
+              </div>
+
+            </div>
+
+          </div>
+
+        </nav>
+
+      </div>
+
+    </header>
+
+    <main>
+
+      <div class="action" id="expo">
+
+        <h2 class="title title__tree">Актуальні події</h2>
+
+        <div class="grid">
+
+          <div class="grid__item--pad-1-6 grid__item--desktop-1-7">
+
+            <div class="action__place">
+              <img src="./images/Rectangle 2.1.png"
+            alt="image" class="action__image">
+            </div>
+
+          </div>
+
+          <div class="
+            action__info
+            grid__item--pad-1-4
+            grid__item--desktop-9-12
+            ">
+
+            <div class="action__data">
+              <span class="title__podii--text">ВИСТАВКА</span>
+              <span class="action__data--time">26.08-29.11.2019</span>
+            </div>
+
+            <div class="title__litle">
+              Йду і повертаюсь
+              <span>
+                <img
+                src="./images/Rectangle 23.1.svg"
+                alt="block"
+                class="icon__action
+                ">
+              </span>
+            </div>
+
+            <div class="action__history">
+              Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+            </div>
+
+          </div>
+
+          <div class="grid__item--pad-1-6 grid__item--desktop-1-7">
+
+            <div class="action__place">
+              <img src="./images/Rectangle 4.1.png"
+            alt="image" class="action__image">
+            </div>
+
+          </div>
+
+          <div class="
+            action__info
+            grid__item--pad-1-4
+            grid__item--desktop-9-12
+            ">
+
+            <div class="action__data">
+              <span class="title__podii--text">ВИСТАВКА</span>
+              <span class="action__data--time action__data--time-first">26.08-29.11.2019</span>
+            </div>
+
+            <div class="title__litle">
+              І спогади і мрії
+              <span>
+                <img
+                src="./images/Rectangle 23.1.svg"
+                alt="block"
+                class="icon__action
+                ">
+              </span>
+            </div>
+
+            <div class="action__history">
+              Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </div>
+
+          </div>
+
+        </div>
+
+        <div class="action">
+
+          <div class="action__classic">
+
+            <div class="action__background">
+              <img
+              src="./images/Rectangle_20.png"
+              alt="back"
+              class="action__background--image"
+              >
+
+              <div class="action__lection ">
+
+                <div class="action__lection--time">
+                  <span class="title__podii--text">ЛЕКЦІЯ</span>
+                  <span class="action__data--time">26/08/2019 - 11:00</span>
+                </div>
+
+                <div class="action__title">
+                  <div class="title__litle">
+                    Від класицизму до романтизму
+                  </div>
+                </div>
+
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
+
+      <div class="gallery" id="gallery">
+
+        <h2 class="title title__tree">Галерея</h2>
+
+        <div class="grid gallery__grid">
+
+          <div class="grid__item--desktop-1-4">
+
+            <div class="gallery__small">
+
+              <img src="./images/Rectangle 13.5.png" alt="img"
+              class="gallery__image--phone"
+              >
+
+              <img src="./images/Rectangle 13.5.png" alt="img"
+              class="gallery__image--phone gallery__image--phone-phantom"
+              >
+
+              <div class="container__pad">
+
+                <img src="./images/Rectangle 24.1.png" alt="img"
+                class="gallery__image--pad"
+                >
+
+                <img src="./images/Rectangle 24.1.png" alt="img"
+                class="gallery__image--pad-phantom"
+                >
+
+              </div>
+
+              <div class="gallery__switch">
+                <img src="./images/Group 17.8.png" alt="elipse">
+              </div>
+
+            </div>
+
+            <div class="gallery__image">
+
+              <img src="./images/Rectangle 13.5.png" alt="img"
+              class="gallery__image--desktop"
+              >
+
+            </div>
+
+          </div>
+
+          <div class="grid__item--desktop-5-12">
+
+            <div class="gallery__image">
+              <img src="./images/Rectangle 3.1.png" alt="img"
+              class="gallery__image--desktop">
+            </div>
+
+          </div>
+
+        </div>
+
+        <div class="grid gallery__grid">
+
+          <div class="grid__item--desktop-1-8">
+
+            <div class="gallery__image">
+
+              <img src="./images/Rectangle 13.3.png" alt="img"
+              class="gallery__image--desktop">
+
+            </div>
+
+
+          </div>
+
+          <div class="grid__item--desktop-9-12">
+
+            <div class="gallery__image">
+              <img src="./images/Rectangle 13.4.png" alt="img"
+              class="gallery__image--desktop">
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+
+      <div class="subscribe">
+
+        <div class="subscribe__form">
+
+          <div class="action__background--image subscribe__img"></div>
+
+          <h2 class="subscribe__title">Підписка</h2>
+
+          <div class="subscribe__title--text">Бути в курсі всіх актуальних подій та останніх новин.</div>
+
+          <div class="subscribe__button">
+            <form action="#">
+              <input
+                name="email"
+                type="email"
+                placeholder="E-mail"
+                class="subscribe__button--text"
+              >
+            </form>
+
+            <button type="submit" class="subscribe__button--button"></button>
+          </div>
+
+        </div>
+
+      </div>
+
+    </main>
+
+    <footer>
+
+      <div class="footer">
+
+        <div class="footer__logo">
+
+          <img src="./images/NA MU.svg" alt="namu">
+
+          <div class="footer__logo--social">
+
+            <img src="./images/Facebook.svg"
+             alt="facebook" class="footer__logo--facebook">
+
+            <img src="./images/instagram (3).svg" alt="instagram">
+
+          </div>
+
+        </div>
+
+        <div class="footer__container">
+
+          <div class="footer__graphic">
+
+            <ul class="footer__graphic--list">
+
+              <h2 class="title__second color color--b">Графік роботи</h2>
+
+              <li class="time color">12:00 — 20:00
+                <span class="title__second color">середа</span>
+              </li>
+
+              <li class="time">12:00 — 20:00
+                <span class="title__second">четвер</span>
+              </li>
+
+              <li class="time">12:00 — 20:00
+                <span class="title__second">п'ятниця</span>
+              </li>
+
+              <li class="time">11:00 — 19:00
+                <span class="title__second">субота</span>
+              </li>
+
+              <li class="time">11:00 — 19:00
+                <span class="title__second">неділя</span>
+              </li>
+
+              <div class="footer__weekend">
+                <span class="time">Вихідні:<span class="title__second"> понеділок, вівторок <br> Каса припиняє роботу за 1 годину до закриття музею</span></span>
+              </div>
+
+            </ul>
+
+            <div class="footer__contacts" id="contacts">
+
+              <h2 class="title__second color color--b">
+                Контакти:
+              </h2>
+
+              <span class="title__second">
+                вул. М. Грушевського, 6; Київ, 01001
+                тел. +38 (044) 278-13-57
+                факс +38 (044) 278-74-54
+                e-mail: info@namu.kiev.ua
+              </span>
+
+            </div>
+
+            <a href="#head" class="footer__button">&uarr;</a>
+
+          </div>
+
+          <div class="footer__nav">
+
+            <ul class="footer__about">
+
+              <li class="menu__item">
+                <a href="#gallery" class="title__second color--b">Галерея</a>
+              </li>
+
+              <li class="menu__item">
+                <a href="#head" class="title__second color--b">Про Нас</a>
+              </li>
+
+              <li class="menu__item">
+                <a href="#expo" class="title__second color--b">Виставки та події</a>
+              </li>
+
+              <li class="menu__item">
+                <a href="#contacts" class="title__second color--b">Контакти</a>
+              </li>
+
+            </ul>
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </footer>
+
   </body>
 </html>
