landing page was finished

--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,10 @@
       type="image/x-icon"
     >
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" >
   </head>
   <body class="page__body">
-    <header>
+    <header id="top" class="header">
       <div class="grid grid--desktop header__grid-image">
         <img
           src="./images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png"
@@ -26,14 +27,13 @@
         <div class="grid grid--desktop">
           <div class="header__top grid__item--desktop--1-7 grid__item--tablet--1-4">
             <a href="#menu" class="icon icon--burger"></a>
-            <a class="header__title header__title-small title logo title--black" href="#home">na <br> mu</a>
+            <a class="title logo" href="#home">na <br> mu</a>
           </div>
 
           <h1
             class=" title
               header__title
               title--black
-              header__title-big
               grid__item--desktop--1-5
               grid__item--tablet--1-3
               "
@@ -107,7 +107,7 @@
       <section id="actual_events" class="events">
         <div class="container">
           <h2 class="title title--black title--middle events__title">Актуальні події</h2>
-          <div class="go_and_return">
+          <div class="actual_events__go-and-return go-and-return">
             <div class="grid grid--desktop events__block">
               <div class="grid__item grid__item--desktop--1-7 grid__item--tablet--1-6">
                 <img
@@ -135,7 +135,7 @@
               </div>
             </div>
           </div>
-          <div class="dreams">
+          <div class="actual_events__dreams dreams">
             <div class="grid grid--desktop events__block">
               <div class="grid__item grid__item--desktop--1-7 grid__item--tablet--1-6">
                 <img
@@ -163,7 +163,7 @@
               </div>
             </div>
           </div>
-          <div class="lection">
+          <div class="actual_events__lection lection">
             <img
               src="./images/events_3.jpg"
               alt="sunset"
@@ -198,6 +198,29 @@
               <img src="./images/gallery_img-4.png" alt="fourth gallery image">
             </div>
           </div>
+          <div class="gallery__tablet-and-phone-block">
+            <div class="swiper">
+              <!-- Additional required wrapper -->
+              <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide">
+                  <img src="./images/gallery_img-1.png" alt="first image">
+                </div>
+                <div class="swiper-slide">
+                  <img src="./images/gallery__swiper-img.png" alt="first image">
+                </div>
+                <div class="swiper-slide">
+                  <img src="./images/gallery__swiper-img2.png" alt="first image">
+                </div>
+                <div class="swiper-slide">
+                  <img src="./images/gallery_img-4.png" alt="first image">
+                </div>
+                ...
+              </div>
+              <!-- If we need pagination -->
+              <div class="swiper-pagination"></div>
+            </div>
+          </div>
         </div>
       </section>
       <section class="subscription" id="subscription">
@@ -225,7 +248,116 @@
       </section>
 
     </main>
-    <footer></footer>
+    <footer class="footer" id="contacts">
+      <div class="container">
+        <div class="grid footer__grid">
+          <div class="grid__item grid__item--desktop--1-1 grid__item--tablet--1-1 footer__logo-with-links">
+            <a class="title logo footer__logo" href="#home">na <br> mu</a>
+
+            <div class="footer__links">
+              <a
+                href="https://www.instagram.com/"
+                class="icon icon--facebook"
+                target="_blank"
+              ></a>
+              <a
+                href="https://www.facebook.com/"
+                target="_blank"
+                class="icon icon--insta"
+              ></a>
+            </div>
+          </div>
+          <div class="grid__item grid__item--desktop--3-4 grid__item--tablet--2-3 footer__schedule">
+            <p class="footer__text footer__text--1">
+              <span class="footer__text-title">Графік роботи</span>
+              <span class="footer__text-info">12:00 - 20:00</span> середа <br>
+              <span class="footer__text-info">12:00 - 20:00</span> четвер <br>
+              <span class="footer__text-info">12:00 - 20:00</span> п'ятниця <br>
+              <span class="footer__text-info">11:00 - 19:00</span> субота <br>
+              <span class="footer__text-info">11:00 - 19:00</span> неділя <br>
+            </p>
+            <p class="footer__text">
+              <span class="footer__text-info">Вихідні:</span> понеділок <br>
+              вівторок <br>
+              Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
+
+          <div class="grid__item grid__item--desktop--5-6 grid__item--tablet--4-5 footer__contacts">
+            <p class="footer__text">
+              <span class="footer__text-title">Контакти</span>
+              <a
+                href="https://goo.gl/maps/pt243zcaZtV4N2Go6"
+                target="_blank"
+                class="footer__contacts-link"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+              <a href="tel:+380442781357" class="footer__contacts-link">
+                тел. +38 (044) 278-13-57
+              </a>
+              <a href="tel:+380442787454" class="footer__contacts-link">
+                факс +38 (044) 278-74-54
+              </a>
+              <a href="mailto:info@namu.kiev.ua" class="footer__contacts-link">
+                e-mail: info@namu.kiev.ua
+              </a>
+            </p>
+          </div>
+          <div class="grid__item footer__link-up">
+            <a href="#top" class="footer__icon"></a>
+          </div>
+          <div class="grid__item grid__item--desktop--7-7 grid__item--tablet--2-5 footer__line"></div>
+          <div class="grid__item grid__item--desktop--8-9 grid__item--tablet--2-3 footer__nav">
+            <a href="#gallery" class="footer__nav-link">Галерея</a>
+            <a href="#actual_events" class="footer__nav-link">Виставки та події</a>
+          </div>
+          <div class="grid__item grid__item--desktop--10-11 grid__item--tablet--4-5 footer__nav">
+            <a href="#subscription" class="footer__nav-link">Про нас</a>
+            <a href="#contacts" class="footer__nav-link">Контакти</a>
+          </div>
+        </div>
+        <div class="footer__copyrigth-and-author">
+          <p class="footer__copyrigth-and-author_text">
+            Copyright &copy; 2019. All Rights Reserved.
+          </p>
+          <p class="footer__copyrigth-and-author_text">
+            Designed by Zhyriada Marina
+          </p>
+        </div>
+      </div>
+
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+
+    <script>
+      const swiper = new Swiper('.swiper', {
+        // Optional parameters
+        direction: 'horizontal',
+          autoplay: {
+            delay: 3000,
+            disableOnInteraction: false,
+          },
+        loop: true,
+
+        // If we need pagination
+        pagination: {
+          el: '.swiper-pagination',
+          clickable: true,
+        },
+
+        // Navigation arrows
+        navigation: {
+          nextEl: '.swiper-button-next',
+          prevEl: '.swiper-button-prev',
+        },
+
+        // And if we need scrollbar
+        scrollbar: {
+          el: '.swiper-scrollbar',
+        },
+      });
+    </script>
   </body>
 </html>
