hover effects on images was added

--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,7 @@
                 <img
                   src="./images/events_1.png"
                   alt="Ілюстрація йду і повертаюсь"
-                  class="events__image events__image--1">
+                  class="events__image events__image--1 image">
               </div>
               <div class="grid__item grid__item--desktop--8-12 grid__item--tablet--1-6">
                 <p>
@@ -141,7 +141,7 @@
                 <img
                   src="./images/events_2.png"
                   alt="Ілюстрація йду і повертаюсь"
-                  class="events__image">
+                  class="events__image image">
               </div>
               <div class="grid__item grid__item--desktop--8-12 grid__item--tablet--1-6">
                 <p>
@@ -167,7 +167,7 @@
             <img
               src="./images/events_3.jpg"
               alt="sunset"
-              class="events__image events__image--last"
+              class="events__image events__image--last image"
             >
             <div class="events__box">
               <p class="events__box-type">
@@ -186,16 +186,32 @@
           <h2 class="title title--middle title--black gallery__title">Галерея</h2>
           <div class="grid gallery__desktop-block">
             <div class="grid__item grid__item--desktop--1-4 gallery__first-row">
-              <img src="./images/gallery_img-1.png" alt="first gallery image">
+              <img
+                src="./images/gallery_img-1.png"
+                alt="first gallery image"
+                class="image"
+              >
             </div>
             <div class="grid__item grid__item--desktop--5-12 gallery__first-row">
-              <img src="./images/gallery_img-2.png" alt="second gallery image">
+              <img
+                src="./images/gallery_img-2.png"
+                class="image"
+                alt="second gallery image"
+              >
             </div>
             <div class="grid__item grid__item--desktop--1-8">
-              <img src="./images/gallery_img-3.png" alt="third gallery image">
+              <img
+                src="./images/gallery_img-3.png"
+                class="image"
+                alt="third gallery image"
+              >
             </div>
             <div class="grid__item grid__item--desktop--9-12">
-              <img src="./images/gallery_img-4.png" alt="fourth gallery image">
+              <img
+                src="./images/gallery_img-4.png"
+                class="image"
+                alt="fourth gallery image"
+              >
             </div>
           </div>
           <div class="gallery__tablet-and-phone-block">
