--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,10 @@
         <div class="header size__nav">
 
           <div class="header__icon">
-            <img src="./images/NA MU.svg" alt="icon"
-            class="header__icon" id="head">
+            <a href="#head">
+              <img src="./images/NA MU.svg" alt="icon"
+              class="header__icon" id="head">
+            </a>
           </div>
 
         </div>
@@ -112,7 +114,7 @@
 
               </ul>
 
-              <div class="title__second">
+              <div class="title__second title__second--margin">
                 <span class="time color--w">Вихідні:<span class="title__second color--w"> понеділок, вівторок <br> Каса припиняє роботу за 1 годину до закриття музею</span></span>
               </div>
 
@@ -337,16 +339,18 @@
           <div class="subscribe__title--text">Бути в курсі всіх актуальних подій та останніх новин.</div>
 
           <div class="subscribe__button">
-            <form action="#">
+            <form action="#" class="subscribe__form">
               <input
                 name="email"
                 type="email"
                 placeholder="E-mail"
                 class="subscribe__button--text"
+                required
               >
+
+              <button class="subscribe__button--button"></button>
             </form>
 
-            <button type="submit" class="subscribe__button--button"></button>
           </div>
 
         </div>
@@ -361,14 +365,21 @@
 
         <div class="footer__logo">
 
-          <img src="./images/NA MU.svg" alt="namu">
+          <a href="#head">
+            <img src="./images/NA MU.svg" alt="icon"
+            class="header__icon" id="#head">
+          </a>
 
           <div class="footer__logo--social">
 
-            <img src="./images/Facebook.svg"
-             alt="facebook" class="footer__logo--facebook">
+            <a href="https://www.facebook.com/namu.museum/?locale=uk_UA">
+              <img src="./images/Facebook.svg"
+              alt="facebook" class="footer__logo--facebook">
+            </a>
 
-            <img src="./images/instagram (3).svg" alt="instagram">
+            <a href="https://www.instagram.com/namu.museum/">
+              <img src="./images/instagram (3).svg" alt="instagram">
+            </a>
 
           </div>
 
