bugs and problems were fixed

--- a/src/index.html
+++ b/src/index.html
@@ -41,9 +41,11 @@
             Художній Музей
           </h1>
 
-          <a href="#actual_events" class=" header__button
-          grid__item--desktop--2-4
-          grid__item--tablet--2-3"
+          <a href="https://kiev.karabas.com/ua/hall/nacionalnyj-khudozhestvennyj-muzej/"
+            class=" header__button
+            grid__item--desktop--2-4
+            grid__item--tablet--1-3"
+            target="_blank"
           >
             <span class="header__button-text">
               Квитки
@@ -272,12 +274,12 @@
 
             <div class="footer__links">
               <a
-                href="https://www.instagram.com/"
+                href="https://www.facebook.com/namu.museum/?locale=uk_UA"
                 class="icon icon--facebook"
                 target="_blank"
               ></a>
               <a
-                href="https://www.facebook.com/"
+                href="https://www.instagram.com/namu.museum/"
                 target="_blank"
                 class="icon icon--insta"
               ></a>
