--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <script type="text/javascript" src="scripts/main.js"
+    defer></script>
   </head>
   <body class="page__body">
-    <script type="text/javascript" src="scripts/main.js"></script>
     <header>
 
       <div class="header__content">
@@ -69,7 +70,7 @@
               <ul class="menu__list">
 
                 <li class="menu__item">
-                  <a href="#gallery" class="menu__link">Галерея</a>
+                  <a href="#gallery" class="menu__link ">Галерея</a>
                 </li>
 
                 <li class="menu__item">
@@ -339,7 +340,8 @@
           <div class="subscribe__title--text">Бути в курсі всіх актуальних подій та останніх новин.</div>
 
           <div class="subscribe__button">
-            <form action="#" class="subscribe__form">
+
+            <form class="subscribe__form">
               <input
                 name="email"
                 type="email"
@@ -348,7 +350,8 @@
                 required
               >
 
-              <button class="subscribe__button--button"></button>
+              <button class="subscribe__button--button button"></button>
+
             </form>
 
           </div>
@@ -426,10 +429,22 @@
               </h2>
 
               <span class="title__second">
-                вул. М. Грушевського, 6; Київ, 01001
-                тел. +38 (044) 278-13-57
-                факс +38 (044) 278-74-54
-                e-mail: info@namu.kiev.ua
+                вул. М. Грушевського, 6; Київ, 01001 <br>
+                тел.
+                <a href="tel:+38 (044) 278-13-57"
+                class="footer__silk">
+                  +38 (044) 278-13-57
+                </a>
+                факс
+                <a href="tel:+38 (044) 278-74-54"
+                class="footer__silk">
+                  +38 (044) 278-74-54
+                </a> <br>
+                e-mail:
+                <a href="mail:info@namu.kiev.ua"
+                class="footer__silk">
+                  info@namu.kiev.ua
+                </a>
               </span>
 
             </div>
@@ -443,19 +458,19 @@
             <ul class="footer__about">
 
               <li class="menu__item">
-                <a href="#gallery" class="title__second color--b">Галерея</a>
+                <a href="#gallery" class="title__second color--b footer__silk">Галерея</a>
               </li>
 
               <li class="menu__item">
-                <a href="#head" class="title__second color--b">Про Нас</a>
+                <a href="#head" class="title__second color--b footer__silk">Про Нас</a>
               </li>
 
               <li class="menu__item">
-                <a href="#expo" class="title__second color--b">Виставки та події</a>
+                <a href="#expo" class="title__second color--b footer__silk">Виставки та події</a>
               </li>
 
               <li class="menu__item">
-                <a href="#contacts" class="title__second color--b">Контакти</a>
+                <a href="#contacts" class="title__second color--b footer__silk">Контакти</a>
               </li>
 
             </ul>
