--- a/src/index.html
+++ b/src/index.html
@@ -429,7 +429,9 @@
               </h2>
 
               <span class="title__second">
-                вул. М. Грушевського, 6; Київ, 01001 <br>
+                <a href="https://goo.gl/maps/62GcUHgpAEnYnpNL6" class="footer__silk">
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a> <br>
                 тел.
                 <a href="tel:+38 (044) 278-13-57"
                 class="footer__silk">
