--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,288 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU Museum</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page page__body" id="home">
+    <header class="header" id="header">
+      <div class="container">
+        <div class="header__content">
+          <div class="header__background"></div>
+          <div class="header__top">
+            <a href="#menu" class="icon icon--menu"></a>
+            <a href="#home" class="logo logo--header">
+              <img
+                src="images/icons/NAMU-logo-2x.png"
+                alt="NAMU-logo"
+                class="logo__img"
+              >
+            </a>
+          </div>
+
+          <h1 class="header__title">
+            Художній
+            <br>
+            Музей
+          </h1>
+
+          <div class="header__tickets">
+            <a href="#events" class="header__link">
+              Квитки
+              <a href="#events" class="button">
+              </a>
+            </a>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <aside class="menu page__menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top">
+            <a href="#home" class="icon icon--close"></a>
+
+            <nav class="nav menu__nav">
+              <ul class="nav__list">
+                <li class="nav__item"><a href="#gallery" class="nav__link">Галерея</a></li>
+                <li class="nav__item"><a href="#about-us" class="nav__link">Про Нас</a></li>
+                <li class="nav__item"><a href="#events" class="nav__link">Виставки та події</a></li>
+                <li class="nav__item"><a href="#contacts" class="nav__link">Контакти</a></li>
+              </ul>
+            </nav>
+          </div>
+
+          <div class="info info--menu">
+            <h5 class="info__title">Графік роботи</h5>
+
+            <ul class="info__list">
+              <li class="info__item"><strong class="info__time">12:00 - 20:00 </strong>середа</li>
+              <li class="info__item"><strong class="info__time">12:00 - 20:00 </strong>четвер</li>
+              <li class="info__item"><strong class="info__time">12:00 - 20:00 </strong>п'ятниця</li>
+              <li class="info__item"><strong class="info__time">11:00 - 19:00 </strong>субота</li>
+              <li class="info__item"><strong class="info__time">11:00 - 19:00 </strong>неділя</li>
+            </ul>
+
+            <p class="info__text">
+              <strong class="info__time">Вихідні:</strong>
+              понеділок, вівторок<br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <main>
+      <section class="events" id="events">
+        <div class="container">
+          <h2 class="events__title title">Актуальні події</h2>
+
+          <div class="events__event event">
+            <img
+              src="../src/images/event_1.png"
+              alt="event_1"
+              class="event__img"
+            >
+
+            <div class="event__details">
+              <div class="event__subtitle">
+                <h4 class="event__type">Виставка</h4>
+                <p class="event__date">26.08-29.11.2023</p>
+              </div>
+
+              <h3 class="event__name">Йду і повертаюсь</h3>
+              <p class="event__descr">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+            </div>
+          </div>
+
+          <div class="events__event event">
+            <img
+              src="../src/images/event_2.png"
+              alt="event_2"
+              class="event__img"
+            >
+
+            <div class="event__details">
+              <div class="event__subtitle">
+                <h4 class="event__type">Виставка</h4>
+                <p class="event__date">26.08-29.11.2023</p>
+              </div>
+
+              <h3 class="event__name">І спогади і мрії</h3>
+              <p class="event__descr">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="event event--lection">
+          <div class="event__details event__details--lection">
+            <div class="event__subtitle event__subtitle--lection">
+              <h4 class="event__type event__type--lection">Лекція</h4>
+              <p class="event__date event__date--lection">26/08/2023-11:00</p>
+            </div>
+
+            <h3 class="event__name event__name--lection">Від класицизму до романтизму</h3>
+          </div>
+        </div>
+      </section>
+
+      <section class="gallery" id="gallery">
+        <div class="container">
+          <h2 class="gallery__title title">Галерея</h2>
+
+          <!-- <div class="gallery__slides-dekstop">
+            <div class="gallery__slide">
+              <img
+                src="./images/gallery/slide_1.png"
+                alt="slide image"
+                class="gallery__img"
+              >
+            </div>
+
+            <div class="gallery__slide">
+              <img
+                src="./images/gallery/slide_2.png"
+                alt="slide image"
+                class="gallery__img"
+              >
+            </div>
+
+            <div class="gallery__slide">
+              <img
+                src="./images/gallery/slide_3.png"
+                alt="slide image"
+                class="gallery__img"
+              >
+            </div>
+
+            <div class="gallery__slide">
+              <img
+                src="./images/gallery/slide_4.png"
+                alt="slide image"
+                class="gallery__img"
+              >
+            </div>
+          </div> -->
+
+          <div class="gallery__swiper">
+            <div class="gallery__swipe">
+              <img
+                src="./images/gallery/slide_1.png"
+                alt="gallery image"
+                class="gallery__img"
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="subscribe" id="subscribe">
+        <div class="container">
+          <div class="subscribe__content">
+            <h2 class="subscribe__title title">Підписка</h2>
+            <p class="subscribe__descr">Бути в курсі всіх актуальних подій та останніх новин.</p>
+
+            <form
+              action=" "
+              method="get"
+              class="subscribe__form"
+              id="form"
+            >
+              <label for="email" class="subscribe__input-label">
+                <input
+                  type="email"
+                  name="email"
+                  class="subscribe__form-email"
+                  placeholder="E-mail"
+                  required
+                >
+              </label>
+              <button class="subscribe__btn btn"></button>
+            </form>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__top">
+            <a href="#home" class="logo">
+              <img
+                src="./images/icons/NAMU-logo-2x.png"
+                alt="NAMU logo"
+                class="logo__img "
+              >
+            </a>
+            <div class="footer__social">
+              <a
+                href="https://www.facebook.com/namu.museum/?locale=uk_UA"
+                class="icon icon--facebook"
+                target="_blank"
+              ></a>
+              <a
+                href="https://www.instagram.com/namu.museum/"
+                class="icon icon--instagram"
+                target="_blank"
+              ></a>
+            </div>
+          </div>
+          <div class="footer__info info info--footer">
+            <div class="info__schedule">
+              <h5 class="info__title">Графік роботи</h5>
+
+              <ul class="info__list">
+                <li class="info__item"><strong class="info__time">12:00 - 20:00 </strong>середа</li>
+                <li class="info__item"><strong class="info__time">12:00 - 20:00 </strong>четвер</li>
+                <li class="info__item"><strong class="info__time">12:00 - 20:00 </strong>п'ятниця</li>
+                <li class="info__item"><strong class="info__time">11:00 - 19:00 </strong>субота</li>
+                <li class="info__item"><strong class="info__time">11:00 - 19:00 </strong>неділя</li>
+              </ul>
+              <p class="info__text">
+                Вихідні понеділок, вівторок<br>
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+
+            <div class="info__contacts" id="contacts">
+              <h5 class="info__title">Контакти:</h5>
+              <p class="info__text">
+                вул. М. Грушевського, 6; Київ, 01001
+                <br>
+                тел. +38 (044) 278-13-57
+                <br>
+                факс +38 (044) 278-74-54
+                <br>
+                e-mail: info@namu.kiev.ua
+              </p>
+            </div>
+            <a href="#home" class="info__button button--up"></a>
+          </div>
+          <nav class="footer__nav nav">
+            <ul class="nav__list">
+              <li class="nav__item"> <a href="#gallery" class="nav__link nav__link--footer">Галерея</a></li>
+              <li class="nav__item"> <a href="#header" class="nav__link nav__link--footer">Про Нас</a></li>
+              <li class="nav__item"> <a href="#events" class="nav__link nav__link--footer">Виставки та події</a></li>
+              <li class="nav__item"> <a href="#contacts" class="nav__link nav__link--footer">Контакти</a></li>
+            </ul>
+          </nav>
+          <div class="footer__copyright">
+            <p>Designed by Zhyriada Marina</p>
+            <p>Copyright © 2019. All Rights Reserved.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
