--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Художній музей</title>
+    <link rel="icon" href="./images/1favicon.png">
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link
@@ -26,8 +27,8 @@
               <a href="#burger" class="icon icon--menu"></a>
             </div>
 
-            <div href="#" class="logo">
-              <a class="logo-box">
+            <div class="logo">
+              <a href="#" class="logo-box">
                 NA <br> MU
               </a>
             </div>
@@ -52,5 +53,108 @@
         </div>
       </div>
     </header>
+    <div class="burger page__burger" id="burger">
+      <div class="burger__container">
+        <div class="burger__content">
+          <nav class="nav burger__nav">
+            <div class="icon__container">
+              <a href="#" class="icon icon--cross"></a>
+            </div>
+            <div class="nav__container">
+              <a href="#galery" class="nav__item nav__item--galery">Галерея</a>
+              <a href="#about" class="nav__item nav__item--about">Про Нас</a>
+              <a href="#events" class="nav__item nav__item--events">Виставки та<br>події</a>
+              <a href="#contacts" class="nav__item nav__item--contacts">Контакти</a>
+            </div>
+          </nav>
+          <div class="burger__line"></div>
+          <div class="timetable burger__timetable">
+            <div class="timetable__container">
+              <h6 class="timetable__title">Графік роботи</h6>
+              <div class="timetable__body">
+                <span class="timetable__time">12:00 — 20:00</span>
+                середа <br>
+                <span class="timetable__time">12:00 — 20:00</span>
+                четвер <br>
+                <span class="timetable__time">12:00 — 20:00</span>
+                п’ятниця <br>
+                <span class="timetable__time">11:00 — 19:00</span>
+                субота <br>
+                <span class="timetable__time">11:00 — 19:00</span>
+                неділя
+              </div>
+            </div>
+
+            <div class="burger__text">
+              <span class="burger__time">Вихідні:</span> понеділок, вівторок <br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </div>
+          </div>
+          <div class="burger__shadow"></div>
+        </div>
+      </div>
+    </div>
+    <section class="cur-events">
+      <div class="cur-events__container">
+        <div class="cur-events__content">
+          <h2 class="cur-events__grand-title">Актуальні
+            події
+          </h2>
+          <article class="cur-events__article">
+            <div class="cur-events__img cur-events__img--tree"></div>
+            <div class="cur-events__info">
+              <div class="cur-events__data-box">
+                <div class="cur-events__small-title">ВИСТАВКА</div>
+                <div class="cur-events__data">26.08-29.11.2019</div>
+              </div>
+
+              <div class="cur-events__title-box">
+                <div class="cur-events__title">Йду і повертаюсь
+                </div>
+                <div class="cur-events__square"></div>
+              </div>
+
+              <div class="cur-events__text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</div>
+            </div>
+          </article>
+
+          <article class="cur-events__article">
+            <div class="cur-events__img cur-events__img--girl"></div>
+            <div class="cur-events__info">
+              <div class="cur-events__data-box">
+                <div class="cur-events__small-title">ВИСТАВКА</div>
+                <div class="cur-events__data">26.08-29.11.2019</div>
+              </div>
+
+              <div class="cur-events__title-box">
+                <div class="cur-events__title">І спогади і мрії</div>
+                <div class="cur-events__square"></div>
+              </div>
+
+              <div class="cur-events__text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</div>
+            </div>
+          </article>
+
+          <article class="cur-events__article cur-events__article--orange">
+            <div class="cur-events__img cur-events__img--orange"></div>
+            <div class="cur-events__info cur-events__info--orange">
+              <div class="cur-events__data-box">
+                <div class="cur-events__small-title cur-events__small-title--orange">ЛЕКЦІЯ</div>
+                <div class="cur-events__data cur-events__data--orange">26/08/2019 - 11:00</div>
+              </div>
+
+              <div class="cur-events__title-box">
+                <div class="cur-events__title cur-events__title--orange">Від класицизму до романтизму</div>
+              </div>
+            </div>
+          </article>
+        </div>
+      </div>
+    </section>
+    <section class="galery"></section>
+    <section class="Subscription"></section>
+    <section class="footer"></section>
+
   </body>
 </html>
