--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
 
             <div class="title__content">
 
-              <h1 class="title">художній музей</h1>
+              <h1 class="title title__head">художній музей</h1>
 
             </div>
 
@@ -250,7 +250,7 @@
 
         <div class="gallery" id="gallery">
 
-          <h2 class="title title__tree">Галерея</h2>
+          <h2 class="title title__tree title__tree--space">Галерея</h2>
 
           <div class="grid gallery__grid">
 
@@ -484,6 +484,16 @@
 
           </div>
 
+        </div>
+
+        <div class="footer__design">
+          <span class="footer__design--text">
+            Copyright © 2019. All Rights Reserved.
+          </span>
+
+          <span class="footer__design--text">
+            Designed by Zhyriada Marina
+          </span>
         </div>
 
       </footer>
