--- a/src/index.html
+++ b/src/index.html
@@ -91,7 +91,7 @@
                 </ul>
               </div>
 
-              <div>
+              <div class="menu__grid--graphic">
                 <ul class="menu__graphic menu__weekend">
 
                   <h2 class="title__second color--w">Графік роботи</h2>
@@ -454,7 +454,13 @@
 
               </div>
 
-              <a href="#head" class="footer__button">&uarr;</a>
+              <a href="#head" class="footer__button">
+                <img
+                  src="./images/Vectorbttm.svg"
+                  alt="string"
+                  class="footer__button--string"
+                >
+              </a>
 
             </div>
 
