Added scroll top btn

--- a/src/index.html
+++ b/src/index.html
@@ -422,6 +422,8 @@
 
     <div class="overlay"></div>
 
+    <div id="myBtn" title="Go to top"></div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
