Decreased scale on photos and added hovers to all links

--- a/src/index.html
+++ b/src/index.html
@@ -357,13 +357,27 @@
             %97%D0%B2,+02000/data=!4m2!3m1!1s0x40d4ce524453048d:0x49a2895b6cb
             43e10?sa=X&ved=2ahUKEwi7x5XBqL7_AhUGposKHU4MAvgQ8gF6BAgQEAI"
             target="_blank"
+            class="footer__link footer__link--width-fixed"
             >
               вул. М. Грушевського, 6; Київ, 01001
             </a>
           </address>
-          тел. <a href="tel:+380442781357">+38 (044) 278-13-57</a> <br>
-          факс <a href="tel:+380442787454">+38 (044) 278-74-54</a> <br>
-          e-mail: <a href="mailto:info@namu.kiev.ua">info@namu.kiev.ua</a>
+
+          <a href="tel:+380442781357" class="footer__link">
+            тел. +38 (044) 278-13-57
+          </a>
+
+          <br>
+
+          <a href="tel:+380442787454"  class="footer__link">
+            факс +38 (044) 278-74-54
+          </a>
+
+          <br>
+
+          <a href="mailto:info@namu.kiev.ua"  class="footer__link">
+            e-mail: info@namu.kiev.ua
+          </a>
         </div>
 
         <div class="footer__weekends">
