deploying on GitHub

--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,11 @@
 
     <link rel="stylesheet" href="./styles/main.scss">
     <!-- <link rel="stylesheet" href="./main.css"> -->
-    
+
     <link
       rel="icon"
       type="image/x-icon"
-      href="./images/NA MU.svg"
+      href="./images/Arrow-up.svg"
     >
   </head>
 
