--- a/src/index.html
+++ b/src/index.html
@@ -22,21 +22,22 @@
     <header class="header">
       <div class="header__container">
         <div class="header__content">
-          <nav class="header__top">
-            <div class="header__icon-box">
-              <a href="#burger" class="icon icon--menu"></a>
-            </div>
+          <div class="header__top">
+            <a href="#burger" class="icon icon--menu"></a>
 
-            <div class="logo">
-              <a href="#" class="logo-box">
-                NA <br> MU
-              </a>
-            </div>
-          </nav>
+            <a href="#" class="logo">
+              <img
+                class="lodo__img"
+                src="./images/logo.png"
+                alt="logo"
+              >
+            </a>
+          </div>
           <div class="header__img"></div>
 
           <div class="header__box">
             <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+
             <div class="header__tickets">
               <div></div>
 
@@ -53,7 +54,7 @@
         </div>
       </div>
     </header>
-    <div class="burger page__burger" id="burger">
+    <aside class="burger page__burger" id="burger">
       <div class="burger__container">
         <div class="burger__content">
           <nav class="nav burger__nav">
@@ -94,7 +95,8 @@
           <div class="burger__shadow"></div>
         </div>
       </div>
-    </div>
+    </aside>
+
     <section class="cur-events">
       <div class="cur-events__container">
         <div class="cur-events__content">
@@ -139,7 +141,7 @@
           <article class="cur-events__article cur-events__article--orange">
             <div class="cur-events__img cur-events__img--orange"></div>
             <div class="cur-events__info cur-events__info--orange">
-              <div class="cur-events__data-box">
+              <div class="cur-events__data-box cur-events__data-box--orange">
                 <div class="cur-events__small-title cur-events__small-title--orange">ЛЕКЦІЯ</div>
                 <div class="cur-events__data cur-events__data--orange">26/08/2019 - 11:00</div>
               </div>
@@ -152,8 +154,32 @@
         </div>
       </div>
     </section>
-    <section class="galery"></section>
+
+    <section class="galery page__galery">
+      <div class="galery__container">
+        <div class="galery__content">
+          <h2 class="galery__grand-title">Галерея
+          </h2>
+          <div class="galery__slider">
+            <div class="galery__img-box">
+              <div class="galery__img galery__img--1"></div>
+              <div class="galery__img galery__img--2"></div>
+              <div class="galery__img galery__img--3"></div>
+              <div class="galery__img galery__img--4"></div>
+            </div>
+            <div class="galery__circle-box">
+              <div class="galery__circle galery__circle--1"></div>
+              <div class="galery__circle galery__circle--2"></div>
+              <div class="galery__circle galery__circle--3"></div>
+              <div class="galery__circle galery__circle--4"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section class="Subscription"></section>
+
     <section class="footer"></section>
 
   </body>
