add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/_utils.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <header class="header">
+      <img
+        class="header_background"
+        src="images/muzei-background.png"
+        alt="Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv"
+      >
+
+      <a class="header__open" href="#backdrop"></a>
+
+      <a class="header__logo" href="#">
+        <img src="images/logo-museum.png" alt="logo muzeum">
+      </a>
+
+      <section id="backdrop" class="header_backdrop">
+        <section class="header__menu">
+          <a class="header__close" href="#"></a>
+          <div class="header_menu-puncts">
+            <div class="header__items one-column">
+              <a class="header__link" href="#">Галерея</a>
+
+              <a class="header__link" href="#">Виставки та <br> події</a>
+            </div>
+
+            <div class="header__items two-column ">
+              <a class="header__link" href="#">Про Нас</a>
+
+              <a class="header__link" href="#">Контакти</a>
+            </div>
+          </div>
+          <div class="header__line"></div>
+          <p class="header__graph">Графік роботи</p>
+
+          <p class="header__time-work">
+            <strong>12:00— 20:00</strong> середа <br>
+            <strong>12:00 — 20:00</strong> четвер <br>
+            <strong>12:00 — 20:00</strong> п’ятниця <br>
+            <strong>11:00 — 19:00</strong> субота <br>
+            <strong>11:00 — 19:00</strong> неділя
+          </p>
+
+          <p class="header__holiday">
+            <strong>Вихідні:</strong> понеділок, вівторок
+            Каса припиняє роботу за 1 годину
+            до закриття музею
+          </p>
+        </section>
+      </section>
+    </header>
+
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
   </body>
 </html>
